--- a/Purchasing.Web/Views/ServiceMessage/Create.cshtml
+++ b/Purchasing.Web/Views/ServiceMessage/Create.cshtml
@@ -75,7 +75,7 @@
 			</li>
 				<li>
                 <div class="editor-label"><label>&nbsp;</label></div>
-				<div class="editor-field"><input class="button" type="submit" value="Create" /> | @Html.ActionLink("Cancel", "Index")</div>
+				<div class="editor-field"><input class="button" type="submit" value="Save" /> | @Html.ActionLink("Cancel", "Index")</div>
 			</li>
 		</ul>
 
