--- a/Purchasing.Web/Views/ServiceMessage/Edit.cshtml
+++ b/Purchasing.Web/Views/ServiceMessage/Edit.cshtml
@@ -79,7 +79,7 @@ Example: Dinosaur 1  *@
 				@Html.HiddenFor(model => model.ServiceMessage.Id)
 			<li>
 				<div class="editor-label"><label>&nbsp;</label></div>
-				<div class="editor-field"><input class="button" type="submit" value="Edit" /> | @Html.ActionLink("Cancel", "Index")</div>
+				<div class="editor-field"><input class="button" type="submit" value="Save" /> | @Html.ActionLink("Cancel", "Index")</div>
 			</li>
 		</ul>
 
