--- a/Purchasing.Web/Views/Workgroup/AddPeople.cshtml
+++ b/Purchasing.Web/Views/Workgroup/AddPeople.cshtml
@@ -92,7 +92,7 @@
 				@* For the clear and submit buttons an empty label is required. Example: <label>&nbsp;</label> *@
 				<div class="editor-label">&nbsp;</div>
 				<div class="editor-field">
-				<input class="button" type="submit" value="Create" /> | @Html.ActionLink("Cancel", "People", new {id = Model.Workgroup.Id, roleFilter = ViewBag.roleFilter})
+				<input class="button" type="submit" value="Save" /> | @Html.ActionLink("Cancel", "People", new {id = Model.Workgroup.Id, roleFilter = ViewBag.roleFilter})
 				</div>
 			</li>
 		</ul>
