--- a/Purchasing.Web/Views/Workgroup/Edit.cshtml
+++ b/Purchasing.Web/Views/Workgroup/Edit.cshtml
@@ -80,7 +80,7 @@ Example: Dinosaur 1  *@
 				@* For the clear and submit buttons an empty label is required. Example: <label>&nbsp;</label> *@
 				<div class="editor-label">&nbsp;</div>
 				<div class="editor-field">
-				<input class="button" type="submit" value="Edit" /> | @Html.ActionLink("Cancel", "Index")
+				<input class="button" type="submit" value="Save" /> | @Html.ActionLink("Cancel", "Index")
 				</div>
 			</li>
 		</ul>
