--- a/Purchasing.Web/Views/ConditionalApproval/Edit.cshtml
+++ b/Purchasing.Web/Views/ConditionalApproval/Edit.cshtml
@@ -70,7 +70,7 @@ Example: Dinosaur 1  *@
 			@* For the clear and submit buttons an empty label is required. Example: <label>&nbsp;</label> *@
 			<div class="editor-label">&nbsp;</div>
 			<div class="editor-field">
-			    <input class="button" type="submit" value="Save changes" /> 
+			    <input class="button" type="submit" value="Save" /> 
                 @if(ViewBag.IsWorkgroup)
                 {
                     @Html.ActionLink("Cancel", "ByWorkgroup", "ConditionalApproval", new {id = ViewBag.WorkgroupId}, new {})
