--- a/Purchasing.Web/Views/Order/_ReviewSubmit.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewSubmit.cshtml
@@ -35,6 +35,7 @@
                                     <option value="">-- Select A Document Type --</option>
                                     <option value="PR">PR (Purchase Request)</option>
                                     <option value="DPO">DPO (Departmental Purchase Order)</option>
+                                    <option value="DRO">DRO (Departmental Repair Order)</option>
                                 </select>
                                 <input type="submit" id="complete-order" name="action" class="button" value="Complete" disabled="disabled"/>
                             </div>
