dynamically swap columns on landing page

--- a/Purchasing.Web/Views/Home/Landing.cshtml
+++ b/Purchasing.Web/Views/Home/Landing.cshtml
@@ -59,7 +59,7 @@
                     <th>&nbsp;</th>
                     <th>Order #</th>
                     <th>Created</th>
-                    <th>Request by</th>
+                    <th id="creator-or-vendor">Request by</th>
                     <th>Current level</th>
                 </tr>
             </thead>
