--- a/Purchasing.Web/Views/Order/_ReviewOrderDetails.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewOrderDetails.cshtml
@@ -77,6 +77,7 @@
                                 <div class="url">
                                     @if (!string.IsNullOrWhiteSpace(Model.Vendor.Url))
                                     {
+                                        
                                         var validUrl = Uri.IsWellFormedUriString(Model.Vendor.Url, UriKind.Absolute);
                                         if (validUrl)
                                         {
@@ -84,9 +85,22 @@
                                         }
                                         else
                                         {
-                                            @Model.Vendor.Url
+                                            var prependUrl = string.Format("http://{0}",Model.Vendor.Url);
+                                            var validUrl2 = Uri.IsWellFormedUriString(prependUrl, UriKind.Absolute);
+                                            if (validUrl2)
+                                            {
+                                                 <a href="@prependUrl" target="_blank">@Model.Vendor.Url</a>
+                                            }
+                                            else
+                                            {
+                                                @Model.Vendor.Url
+                                            }
                                         }
                                     }
+                                   @if (!string.IsNullOrWhiteSpace(Model.Vendor.Url) && !string.IsNullOrWhiteSpace(Model.Vendor.Email))
+                                   {
+                                       @Html.Encode(" | ");
+                                   } 
                                     @if (!string.IsNullOrWhiteSpace(Model.Vendor.Email))
                                     {
                                         <a href="mailto: @Model.Vendor.Email">@Model.Vendor.Email</a>
