added support for entering a specific phone number for an order, but will default to address phone number if one is not specified.
added the display to reivew page, printout and updated the WS.

associated with uservoice issue https://ucdavis.uservoice.com/admin/forums/126891-purchasing/suggestions/2815487-end-users-phone-should-appear-in-order-review-scr#/comments

--- a/Purchasing.Web/Views/Order/_ReviewOrderDetails.cshtml
+++ b/Purchasing.Web/Views/Order/_ReviewOrderDetails.cshtml
@@ -132,14 +132,18 @@
                             <div class="fn">@Model.Order.DeliverTo</div>
                             <div class="email">@Model.Order.DeliverToEmail</div>
                             <div class="adr">
-
                                 <span class="street-address">@Model.Address.Room @Model.Address.Building</span>
                                 <span class="street-address">@Model.Address.Address</span>
                                 <span class="locality">@Model.Address.City</span>
                                 <span class="region" title="California">@Model.Address.State</span>
                                 <span class="postal-code">@Model.Address.Zip</span>
                             </div>
-        
+                            @if (!string.IsNullOrEmpty(Model.Order.DeliverToPhone) || !string.IsNullOrEmpty(Model.Address.Phone))
+                            {
+                                <div class="phone">
+                                    <span>Ph: @(!string.IsNullOrEmpty(Model.Order.DeliverToPhone) ? Model.Order.DeliverToPhone : Model.Address.Phone)</span>
+                                </div>
+                            }
                         </div>
                     </div>
                 </section>
