--- a/Purchasing.Web/Views/Shared/_Layout.cshtml
+++ b/Purchasing.Web/Views/Shared/_Layout.cshtml
@@ -145,6 +145,7 @@
                             <li>@Html.ActionLink("Workgroup", "Index", "Workgroup", new { }, new { @class = "navigation-button" })</li>
                             <li>@Html.ActionLink("Orgs", "Index", "Organization", new { }, new { @class = "navigation-button" })</li>    
                             @*<li>@Html.ActionLink("Conditional Approvals", "Index", "ConditionalApproval")</li>*@
+                            <li>@Html.ActionLink("Reports", "Index", "Report", new {}, new {@class="navigation-button"})</li>
                         }
                         @if (roles.Contains(Role.Codes.Admin))
                         {
