added tip for using the extended zip for shipping to campus, so that when it goes to dafis it calculates shipping correclty., might need to upgrade to qtip.

--- a/Purchasing.Web/Views/Workgroup/_AddressForm.cshtml
+++ b/Purchasing.Web/Views/Workgroup/_AddressForm.cshtml
@@ -85,6 +85,7 @@ Example: Dinosaur 1  *@
 					<div class="editor-field">
 						@Html.EditorFor(model => model.WorkgroupAddress.Zip)
 						@Html.ValidationMessageFor(model => model.WorkgroupAddress.Zip)
+                        <span style="font-style: italic; margin-left: 10px;">* When shipping to campus, use 95616-5270 for proper tax calculation in Dafis.</span>
 					</div>
 				</li>
 						<li>
