Basic styles for Reports

--- a/Purchasing.Web/Css/custom.css
+++ b/Purchasing.Web/Css/custom.css
@@ -325,3 +325,8 @@ body .ui-tooltip-default .ui-tooltip-content { background-color: #FFF; border:2p
 
 /* I don't know where this is */
 .ui-dialog-content .ui-state-hover {padding: .4em 1em !important;}
+
+
+
+
+/* reports */
