--- a/Purchasing.Web/Views/History/Index.cshtml
+++ b/Purchasing.Web/Views/History/Index.cshtml
@@ -15,7 +15,7 @@
     Bundles.Reference("scripts/public/single/TableTools.js");
     Bundles.Reference("scripts/public/single/ZeroClipboard.js");
     Bundles.Reference("scripts/public/single/RearrangeDataTable.js");
-    Bundles.Reference("scripts/public/single/FixedHeader.min.js");
+    Bundles.Reference("scripts/public/single/FixedHeader.js");
    
 }
 
