--- a/Purchasing.Web/Views/Report/Workload.cshtml
+++ b/Purchasing.Web/Views/Report/Workload.cshtml
@@ -54,7 +54,7 @@ var data = Model.OrgHeaders.OrderBy(x => x.OrgId).ToList();
         @foreach (var person in Model.ReportWorkloads.OrderBy(x => x.UserFullName).Select(x=>x.UserFullName).Distinct())
         {
             <tr class="username">
-                <td>@person</td>
+                <th>@person</th>
                 @foreach(var org in data)
                 {
                     foreach (var col in org.Workgroups)
@@ -64,7 +64,7 @@ var data = Model.OrgHeaders.OrderBy(x => x.OrgId).ToList();
                 }
             </tr>
             <tr class="edit-row">
-                <td>Edit</td>
+                <th>Edit</th>
                 @foreach(var org in data)
                 {
                     foreach (var col in org.Workgroups)
@@ -74,7 +74,7 @@ var data = Model.OrgHeaders.OrderBy(x => x.OrgId).ToList();
                 }
             </tr>
             <tr class="approve-row">
-                <td>Approved</td>
+                <th>Approved</th>
                 @foreach(var org in data)
                 {
                     foreach (var col in org.Workgroups)
@@ -101,14 +101,18 @@ var data = Model.OrgHeaders.OrderBy(x => x.OrgId).ToList();
         .report-head select {font-size: 1.25em;}
         
         .report-table {background: #fff; border: 1px solid #CCCCCC; box-shadow: #999 5px 5px 5px; border-radius: 5px;}
-        .workgrouptop {text-align: center;}
+        
+        thead th {text-align: center; padding-top: 5px;}
+        tbody td {min-width: 100px; text-align: center; border-left: 1px solid #fff;}
+        
+        .workgrouptop {font-size: 1.5em; padding-bottom: 0px; padding-top: 10px;}
         
         .approve-row, .edit-row {background: #aedfc4 !important;}
         
-        .username > td:first-child { font-weight: bold;}
-        .edit-row > td:first-child{ padding-left: 30px;}
+        .username > th:first-child { font-weight: bold;}
+        .edit-row > th:first-child { padding-left: 30px;}
         .edit-row, .approve-row { background-color: green;}
-        .approve-row > td:first-child{ padding-left: 30px;}
+        .approve-row > th:first-child{ padding-left: 30px;}
         
     </style>
 }
