--- a/Purchasing.Web/Views/Workgroup/_WorkgroupForm.cshtml
+++ b/Purchasing.Web/Views/Workgroup/_WorkgroupForm.cshtml
@@ -64,8 +64,8 @@
     </div>
 </li>
 <li>
-    <div class="editor-label required">
-        @Html.LabelFor(model => model.Workgroup.IsActive)<span class"red">*</span>
+    <div class="editor-label">
+        @Html.LabelFor(model => model.Workgroup.IsActive)
     </div>
     <div class="editor-field">
         @Html.EditorFor(model => model.Workgroup.IsActive)
