The min-ified js was not working in the bundle

--- a/Purchasing.Web/Views/History/AdminOrders.cshtml
+++ b/Purchasing.Web/Views/History/AdminOrders.cshtml
@@ -5,8 +5,7 @@
     ViewBag.SingleColumn = false;
     ViewBag.GetMethod = "AdminOrders";
     ViewBag.LoadFixedHeaders = true;
-
-    Bundles.Reference("scripts/public/single/FixedHeader.min.js");
+    Bundles.Reference("Scripts/public/single/FixedHeader.js");
 }
 
 @section SubNav
