--- a/Purchasing.Web/Css/Site.css
+++ b/Purchasing.Web/Css/Site.css
@@ -592,6 +592,7 @@ h1, h2, h3, h4
 div#ui-datepicker-div.ui-datepicker
 {
     background:#eee;
+    z-index: 500 !important;
 }
 
 #ui-datepicker-div .ui-state-highlight, 
