filled in some more faq content

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -440,3 +440,7 @@ Small Device Styles
   }
 
 }
+
+
+.faqreturn {style: inline-block; float: right;}
+.question {border-bottom: 1px dotted lightgray; margin: 1em 0;}
